--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,8 +2,8 @@
 trigger:
 -master
 
-pool:
-  vmImage: ubuntu-latest
+ pool:
+-vmImage: ubuntu-latest
 
 steps:
   - task: TerraformTaskV2@2
@@ -15,12 +15,12 @@ steps:
       backendAzureRmResourceGroupName: 'terraform-rg'
       backendAzureRmStorageAccountName: 'kendrickstorage'
 
-- task: TerraformTaskV2@2
-  inputs:
-    provider: 'azurerm'
-    command: 'plan'
-    workingDirectory: 'SQL-Server-Creation'
-    commandOptions: '-var ="password=$(SQL-PASSWORD)" -var="ip_address=$(IP_ADDRESS)"'
+  - task: TerraformTaskV2@2
+    inputs:
+      provider: 'azurerm'
+      command: 'plan'
+      workingDirectory: 'SQL-Server-Creation'
+      commandOptions: '-var ="password=$(SQL-PASSWORD)" -var="ip_address=$(IP_ADDRESS)"'
       backendAzureRmContainerName: 'kendrickcontainer'
       backendAzureRmKey: 'terraform.tfstate'
 
